# nce_analysis_service

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  README.zh-TW.md  pyproject.toml
analysis_core/: __init__.py  association.py  dominance.py  ratio_hotspot.py  stats.py  trend.py  uplift.py  validation.py
docs/: statistical_and_ml_analysis_guide.zh-TW.md
docs/superpowers/plans/: 2026-07-04-cross-stage-impact-analysis.md  (+4 more)
examples/: generate_sample_files.py  run_example.py  sample_config.yaml  sample_data.csv  sample_data.parquet  sample_data.py
nce_analysis/: __main__.py  cli.py  config.py  io.py  pipeline.py  result.py  schema.py
nce_analysis/drift/: base.py  correlation.py  regression_cusum.py
nce_analysis/hotspot/: base.py  ratio_threshold.py
nce_analysis/noise_filter/: base.py  majority_rule.py
nce_analysis/preprocessing/: base.py  wide_history_reshape.py
nce_analysis/root_cause/: base.py  both.py  ml.py  statistical.py
nce_analysis/viz/: chart_board.py
tests/: test_both.py  test_chart_board.py  test_cli.py  test_config.py  test_correlation.py  test_drift_base.py  test_hotspot_base.py  test_io.py  test_majority_rule.py  test_ml.py  test_noise_filter_base.py  test_pipeline_e2e.py  test_preprocessing_base.py  test_ratio_threshold.py  test_regression_cusum.py  test_result.py  test_root_cause_base.py  test_schema.py  test_statistical.py  test_wide_history_reshape.py
tests/analysis_core/: test_association.py  test_dependency_direction.py  test_dominance.py  test_ratio_hotspot.py  test_stats.py  test_trend.py  test_uplift.py  test_validation.py
(+4 files in other folders)
