[project]
name = "nce-analysis"
version = "0.1.0"
description = "Cross-stage impact analysis service for LITHO NCE root-cause analysis"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "pydantic>=2.0",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "shap>=0.44",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "pyarrow>=14.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nce_analysis"]
